--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -7,13 +7,15 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    name: Update Profile README
-
+    permissions:
+     contents: write
+     
     steps:
+    
       - uses: actions/checkout@v2.3.4
-      
-      - uses: Readme-Workflows/recent-activity@v2.4.1
+     
+      - uses: Jsebashr/github-activity-readme@master
+     
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
