--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -7,15 +7,14 @@ on:
 
 jobs:
   build:
+    name: Update this repo README with recent activity
+    runs-on: ubuntu-latest
     permissions:
      contents: write
-     
-    steps:
     
-      - uses: actions/checkout@v2.3.4
-     
+    steps:
+      - uses: actions/checkout@v4
       - uses: Jsebashr/github-activity-readme@master
-     
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
