--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -13,8 +13,10 @@ jobs:
      contents: write
     
     steps:
-      - uses: actions/checkout@v4
-      - uses: Jsebashr/github-activity-readme@master
-        env:
+       - uses: actions/checkout@v4.2.2
+      
+       - uses: Readme-Workflows/recent-activity@v2.4.1
+      
+         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
